Refactory on Unit Tests to Remove Code Duplication